fixing spacing

--- a/web/muse/static/ripley/style.css
+++ b/web/muse/static/ripley/style.css
@@ -267,7 +267,6 @@ border-bottom:1px solid #797979;
 font-size:16px;
 padding-bottom:4px;
 text-align:center;
-margin-top: 5px;
 float: left;
 }
 
